refactor sampling batch runner